fixed code blocks displaying inconsistently on ios

--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -7,6 +7,9 @@ html {
 	font-size: 12pt;
 	line-height: 1.5;
 	scroll-behavior: smooth;
+
+	// On iOS 17.2.1, scrollable code blocks have a much larger font size without this
+	-webkit-text-size-adjust: none;
 }
 
 body {
